--- a/SOURCE/BTL/HeDieuHanh/HeDieuHanh/HeDieuHanh.csproj
+++ b/SOURCE/BTL/HeDieuHanh/HeDieuHanh/HeDieuHanh.csproj
@@ -46,14 +46,41 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Class\Bartery.cs" />
+    <Compile Include="Class\Datetime.cs" />
+    <Compile Include="Class\Music.cs" />
+    <Compile Include="Class\Network.cs" />
+    <Compile Include="Class\TaskManager.cs" />
+    <Compile Include="Class\Volume.cs" />
+    <Compile Include="GUI\frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="GUI\frmMain.Designer.cs">
+      <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="Class\Program.cs" />
+    <Compile Include="GUI\ucMusic.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\ucMusic.Designer.cs">
+      <DependentUpon>ucMusic.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\ucTaskManager.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\ucTaskManager.Designer.cs">
+      <DependentUpon>ucTaskManager.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="GUI\frmMain.resx">
+      <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ucMusic.resx">
+      <DependentUpon>ucMusic.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ucTaskManager.resx">
+      <DependentUpon>ucTaskManager.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -76,5 +103,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
