--- a/SOURCE/BTL/HeDieuHanh/HeDieuHanh/HeDieuHanh.csproj
+++ b/SOURCE/BTL/HeDieuHanh/HeDieuHanh/HeDieuHanh.csproj
@@ -71,6 +71,12 @@
     <Compile Include="GUI\ucTaskManager.Designer.cs">
       <DependentUpon>ucTaskManager.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\ucUtilities.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="GUI\ucUtilities.Designer.cs">
+      <DependentUpon>ucUtilities.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="GUI\frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
@@ -80,6 +86,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\ucTaskManager.resx">
       <DependentUpon>ucTaskManager.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ucUtilities.resx">
+      <DependentUpon>ucUtilities.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
